[package]
name = "solana-anchor-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_anchor_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.0"

[provider]
cluster = "testnet"
wallet = "~/.config/solana/id.json"

[programs.testnet]
escrow_project = "Fg6PaFzn4Cbd4jn31vgYvo3gNPWieoHRNKjfJQe1TrZF"